# anodized-poem

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Shuttle.toml  db-pdpresenca-query-2023-12-27-00-26-39.csv  flake.nix  schema.sql
.github/workflows/: deploy.yml  lint.yml
css/: pico.amber.css  pico.amber.min.css  pico.blue.css  pico.blue.min.css  pico.classless.amber.css  pico.classless.amber.min.css  pico.classless.blue.css  pico.classless.blue.min.css  pico.classless.conditional.amber.css  pico.classless.conditional.amber.min.css  pico.classless.conditional.blue.css  pico.classless.conditional.blue.min.css  pico.classless.conditional.cyan.css  pico.classless.conditional.cyan.min.css  pico.classless.conditional.fuchsia.css  pico.classless.conditional.fuchsia.min.css  pico.classless.conditional.green.css  pico.classless.conditional.green.min.css  pico.classless.conditional.grey.css  pico.classless.conditional.grey.min.css  pico.classless.conditional.indigo.css  pico.classless.conditional.indigo.min.css  pico.classless.conditional.jade.css  pico.classless.conditional.jade.min.css  pico.classless.conditional.lime.css  pico.classless.conditional.lime.min.css  pico.classless.conditional.orange.css  pico.classless.conditional.orange.min.css  pico.classless.conditional.pink.css  pico.classless.conditional.pink.min.css  pico.classless.conditional.pumpkin.css  pico.classless.conditional.pumpkin.min.css  pico.classless.conditional.purple.css  pico.classless.conditional.purple.min.css  pico.classless.conditional.red.css  pico.classless.conditional.red.min.css  pico.classless.conditional.sand.css  pico.classless.conditional.sand.min.css  pico.classless.conditional.slate.css  pico.classless.conditional.slate.min.css  (+189 more)
src/: data.rs  main.rs  schema.rs  util.rs
src/data_api/: controller.rs  service.rs
src/hypermedia_api/: controller.rs
templates/: admin.html  base.html  guest.html  login.html
