[package]
name = "fernanda"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["serde-json"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
num-traits = "0.2.19"
poem = { version = "3.0.4", features = ["session", "static-files"] }
poem-openapi = { version = "5.0.3", features = ["swagger-ui", "chrono"] }
serde = "1.0.204"
serde_json = "1.0.122"
shuttle-poem = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls", "chrono", "postgres"] }
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev]
debug = 0
strip = "debuginfo"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = 0 }
# unwrap_used = { level = "warn", priority = 1 }

# allow_attributes_without_reason = { level = "warn", priority = 4 } # nightly
as_underscore = { level = "warn", priority = 4 }
panic_in_result_fn = { level = "warn", priority = 4 }

needless_return = { level = "allow", priority = 6 }
module_name_repetitions = { level = "allow", priority = 6 }

[lints.rust]
unsafe_code = { level = "forbid", priority = 3 }
nonstandard_style = { level = "warn", priority = 2 }
future_incompatible = { level = "warn", priority = 1 }
